sitepreview/trust/v1.3.0/ActorDefinition-Issuer.md
# Issuer - WHO SMART Trust v1.3.0

* [**Table of Contents**](toc.md)
* [**Indices**](indices.md)
* [**Artifact Index**](artifacts.md)
* **Issuer**

## ActorDefinition: Issuer (Experimental) 

| | |
| :--- | :--- |
| *Official URL*:http://smart.who.int/trust/ActorDefinition/Issuer | *Version*:1.3.0 |
| Active as of 2025-10-27 | *Computable Name*:Issuer |

 
An Issuer a system authorized by a Trust Network Participant to generate Verifiable Digital Health Certificates which are provided to a Holder. An Issuer is responsible for generating the content that is digitally signed within the Verifiable Digital Health Certificate. In order to sign this content, an Issuer should either itself be a Document Signer or utilize a Document Signer service, as authorized by the jurisdicitonal policy. 

* Requirements: Contact Email
  * This actor fulfills the following requirements:* Issue a Verifiable Digital Health Certificate to a Holder
* Publish business rules to a Trust Anchor
* Publish Cert Logic business rules to a Trust Anchor
* Publish business rules to a Trust Anchor using HL7 FHIR: No contact email has been registered.
* Requirements: Jurisdiction
  * This actor fulfills the following requirements:* Issue a Verifiable Digital Health Certificate to a Holder
* Publish business rules to a Trust Anchor
* Publish Cert Logic business rules to a Trust Anchor
* Publish business rules to a Trust Anchor using HL7 FHIR: 001

